Fixed the CSS mapping error. Simple CSS reference error of using class references for ids.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       bottom: 0;
       top: 0;
       height: 100%;
-      width: 75%;
+      width: 90%;
       float: left;
       z-index: -1;
     }
@@ -41,15 +41,16 @@
       position: relative;
       height: 100%;
       float: right;
-      width: 25%;
+      width: 10%;
       z-index: 0;
     }
   </style>
 </head>
 <body>
-  <div id='wrapper'>
-    <div id='map'></div>
-    <div id='table'></div>
+  
+  <div class="wrapper">
+    <div id="map" class="map">Map</div>
+    <div id="table" class="table">Table</div>
   </div>
   
 <!-- TODO: put all components in their own jsx files -->
