--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </body>
 
   <!-- leaflet: js makes a variable named 'L' that is available in webpack as require('leaflet')  -->
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+  <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
   <!-- webpack's bundle.js -->
   <script src="build/bundle.js"></script>
