Added loading screen since initial bundle load is long

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   
     <div id="app-container"></div>
 
+    <div id="loading">Loading...</div>
+
   </body>
 
   <!-- leaflet: js makes a variable named 'L' that is available in webpack as require('leaflet')  -->
